# madrigal_video-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/clients/: __init__.py  gemini.py  mistral.py  s3_storage.py  supabase_storage.py  tts.py  whisper.py
app/events/: publisher.py
app/models/: api.py  domain.py
app/queue/: queue.py
app/services/: video_service.py
app/storage/: repository.py
tests/: test_api.py
