[tool.poetry]
name = "video-service"
version = "0.1.0"
description = "Video workflow microservice"
authors = ["Codex"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.24.0"
kafka-python = "^2.0.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.3"
httpx = "^0.26.0"
openai-whisper = "^20231117"
boto3 = "^1.34.143"
moviepy = "^1.0.3"
imageio-ffmpeg = "^0.4.9"
numpy = "^1.26.4"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
